Bug 2027100 - Fix too-large gap between navbar and main pane r=mstriemer,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D291013

--- a/toolkit/themes/shared/in-content/common-shared.css
+++ b/toolkit/themes/shared/in-content/common-shared.css
@@ -550,7 +550,7 @@ xul|label[disabled] {
 
 /* Category List */
 
-#categories {
+#categories:not(moz-page-nav) {
   appearance: none;
   background-color: initial; /* override the background-color set on all richlistboxes in common.inc.css */
   margin: 70px 0 0;
@@ -560,7 +560,7 @@ xul|label[disabled] {
 }
 
 @media print {
-  #categories {
+  #categories:not(moz-page-nav) {
     display: none;
   }
 }
